--- a/config/config.ini
+++ b/config/config.ini
@@ -7,7 +7,7 @@ host = 172.17.0.3
 port = 3306
 db = auto
 user = root
-pass = nst@!@#
+pass = 
 
 [sqlmap]
 path = /home/proxyscan/b0lu-fuzzle/fuzzle/server/sqlmap/
